[gd_scene load_steps=2 format=3 uid="uid://boljn7j1t4k8j"]

[ext_resource type="Script" uid="uid://c84x24o0ougkv" path="res://scripts/ui/AmmoRearmPanel.gd" id="1"]

[node name="AmmoRearmPanel" type="Control"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="Root" type="VBoxContainer" parent="."]
layout_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="Header" type="HBoxContainer" parent="Root"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="Root/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rearm"

[node name="Depot" type="Label" parent="Root/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "Depot: -"

[node name="Body" type="VBoxContainer" parent="Root"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="UnitList" type="ItemList" parent="Root/Body"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
allow_reselect = true

[node name="AmmoContainer" type="VBoxContainer" parent="Root/Body"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 6

[node name="RowButtons" type="HBoxContainer" parent="Root/Body"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="BtnFull" type="Button" parent="Root/Body/RowButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Full"

[node name="BtnHalf" type="Button" parent="Root/Body/RowButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Half"

[node name="BtnCommit" type="Button" parent="Root/Body/RowButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Commit"
